--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -12,20 +12,7 @@
       = succeed "." do
         %strong= @confirmation.request_reference
 
-    %p
-      We will call you within one working day, between
-      %strong= @confirmation.callback_time
-      to arrange a repair appointment.
-
-    %p
-      %strong
-        If you have any questions, please call us on
-        %span{:itemprop => "telephone"}
-          = link_to "020 8356 3691", "tel:+02083563691"
-      and quote your reference number
-      = succeed "." do
-        %strong= @confirmation.request_reference
-      We are open Monday to Friday 8am - 7pm and Saturdays 9am - 1pm.
+    = render @confirmation.scheduled_action
 
 .grid-row
   %section#summary.column-two-thirds
